--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "bump:minor": "node scripts/bump-version-advanced.cjs minor",
     "bump:major": "node scripts/bump-version-advanced.cjs major",
     "db:seed": "npx tsx prisma/seed.ts",
-    "dev": "npm run prebuild && next dev --turbopack",
+    "dev": "npm run prebuild && cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 node server.js",
     "dev:https": "npm run prebuild && cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 node scripts/dev-server.mjs",
     "devs": "npm run prebuild && cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 node server.js",
     "format": "prettier --write \"**/*.{ts,tsx,css,json}\"",
@@ -110,7 +110,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
-    "react-lgpd-consent": "^0.3.2",
+    "react-lgpd-consent": "^0.3.3",
     "recharts": "^3.1.2",
     "remask": "^1.2.2",
     "sass": "^1.90.0",
