--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,10 +5,10 @@ updates:
     schedule: { interval: "weekly" }
     ignore:
       - dependency-name: "*"
-      - update-types: ["version-update:semver-major"]
+        update-types: ["version-update:semver-major"]
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule: { interval: "weekly" }
     ignore:
       - dependency-name: "*"
-      - update-types: ["version-update:semver-major"]
+        update-types: ["version-update:semver-major"]
