--- a/package.json
+++ b/package.json
@@ -91,14 +91,14 @@
   },
   "dependencies": {
     "@anpdgovbr/shared-types": "^0.1.4-beta",
-    "@anpdgovbr/shared-ui": "^0.2.1-beta.0",
+    "@anpdgovbr/shared-ui": "^0.2.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@govbr-ds/core": "^3.6.2",
     "@hookform/resolvers": "^5.2.1",
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
-    "@mui/x-data-grid": "^8.10.0",
+    "@mui/x-data-grid": "^8.10.1",
     "@prisma/client": "^6.14.0",
     "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
@@ -123,7 +123,7 @@
     "@next/eslint-plugin-next": "^15.4.6",
     "@types/lodash": "^4.17.20",
     "@types/next-auth": "^3.15.0",
-    "@types/node": "^24.2.1",
+    "@types/node": "^24.3.0",
     "@types/node-fetch": "^2.6.13",
     "@types/papaparse": "^5.3.16",
     "@types/react": "^19",
