--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "bump:minor": "node scripts/bump-version-advanced.cjs minor",
     "bump:major": "node scripts/bump-version-advanced.cjs major",
     "db:seed": "npx tsx prisma/seed.ts",
-    "dev": "npm run prebuild && cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 node server.js",
+    "dev": "npm run prebuild && next dev --turbopack",
     "dev:https": "npm run prebuild && cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 node scripts/dev-server.mjs",
     "devs": "npm run prebuild && cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 node server.js",
     "format": "prettier --write \"**/*.{ts,tsx,css,json}\"",
@@ -138,6 +138,7 @@
     "@typescript-eslint/parser": "^8.39.1",
     "cross-env": "^10.0.0",
     "eslint": "^9.33.0",
+    "eslint-plugin-filenames": "^1.3.2",
     "eslint-config-next": "^15.4.6",
     "eslint-plugin-react-hooks": "^5.2.0",
     "husky": "^9.1.7",
