--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
   },
   "dependencies": {
     "@anpdgovbr/shared-types": "^0.1.4-beta",
-    "@anpdgovbr/shared-ui": "^0.2.1",
+    "@anpdgovbr/shared-ui": "file:../shared-ui/anpdgovbr-shared-ui-0.2.2-beta.2.tgz",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@govbr-ds/core": "^3.6.2",
@@ -138,8 +138,8 @@
     "@typescript-eslint/parser": "^8.39.1",
     "cross-env": "^10.0.0",
     "eslint": "^9.33.0",
-    "eslint-plugin-filenames": "^1.3.2",
     "eslint-config-next": "^15.4.6",
+    "eslint-plugin-filenames": "^1.3.2",
     "eslint-plugin-react-hooks": "^5.2.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.5",
