fix: atualizar dependências do pacote @anpdgovbr/shared-ui e @typescript-eslint para versões mais recentes

--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
   },
   "dependencies": {
     "@anpdgovbr/shared-types": "^0.1.4-beta",
-    "@anpdgovbr/shared-ui": "file:../shared-ui/anpdgovbr-shared-ui-0.2.2-beta.2.tgz",
+    "@anpdgovbr/shared-ui": "^0.2.1-beta.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@govbr-ds/core": "^3.6.2",
@@ -134,8 +134,8 @@
     "@types/papaparse": "^5.3.16",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@typescript-eslint/eslint-plugin": "^8.39.1",
-    "@typescript-eslint/parser": "^8.39.1",
+    "@typescript-eslint/eslint-plugin": "^8.40.0",
+    "@typescript-eslint/parser": "^8.40.0",
     "cross-env": "^10.0.0",
     "eslint": "^9.33.0",
     "eslint-config-next": "^15.4.6",
