--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "lint-staged": "lint-staged",
     "version:env": "node scripts/set-version-env.cjs",
     "prebuild": "npm run version:env && npm run generate:version && npm run build-routes",
+    "docs:typedoc": "typedoc --options typedoc.json",
+    "docs": "npm run docs:typedoc",
     "prepare": "husky",
     "pre-commit": "lint-staged",
     "prisma:migrate": "npx prisma migrate dev --name init",
@@ -142,6 +144,7 @@
     "lint-staged": "^16.1.5",
     "prettier": "^3.6.2",
     "prisma": "^6.14.0",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "typedoc": "^0.29.0"
   }
 }
