feat: enhance type definitions and documentation across components and hooks
- Updated interfaces to `export` in various UI components for better accessibility.
- Added detailed JSDoc comments to improve code documentation and understanding.
- Refactored `useApi` to enhance URL handling and added global mutate function.
- Improved validation schemas with comprehensive comments for clarity.
- Extended type definitions for Prisma delegates and validation results.
- Updated TypeScript configuration to include shared types for better type safety.
- Enhanced the `withApi` and `withApiSlim` wrappers with detailed documentation.
- Added utility functions for date handling with thorough JSDoc comments.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,6 +33,7 @@
     "next-auth.d.ts",
     "**/*.ts",
     "**/*.tsx",
+    "node_modules/@anpdgovbr/shared-types/dist/**/*.d.ts",
     ".next/types/**/*.ts"
   ],
   "exclude": ["node_modules", ".next", "dist", "build"]
