refactor: ajustar formatação e organização do tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,12 @@
       "@scripts/*": ["scripts/*"]
     }
   },
-  "include": ["next-env.d.ts", "next-auth.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    "next-auth.d.ts",
+    "next-env.d.ts",
+    ".next/types/**/*.ts"
+  ],
   "exclude": ["node_modules", ".next", "dist", "build"]
 }
