refactor: ajustar workflow do CodeQL e remover configuração do TypeDoc'

--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "version:env": "node scripts/set-version-env.cjs",
     "prebuild": "npm run version:env && npm run generate:version && npm run build-routes",
     "docs:typedoc": "typedoc --options typedoc.json",
-    "docs": "npm run docs:typedoc",
+    "docs:clean": "rimraf .typedocs public/docs || true",
+    "docs:build": "npm run docs:typedoc",
+    "docs": "npm run docs:build",
     "prepare": "husky",
     "pre-commit": "lint-staged",
     "prisma:migrate": "npx prisma migrate dev --name init",
