--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,16 +1,16 @@
 name: CodeQL
 on:
   push:
-    branches: [main, stable, develop]
+    branches: [main]
   pull_request:
-    branches: [main, stable, develop]
+    branches: [main, develop]
   schedule:
     - cron: "0 3 * * 1"
 
 jobs:
   analyze:
     name: Analyze (${{ matrix.language }})
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     permissions:
       actions: read
       contents: read
