--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,5 +35,5 @@
     "next-env.d.ts",
     ".next/types/**/*.ts"
   ],
-  "exclude": ["node_modules", ".next", "dist", "build"]
+  "exclude": ["node_modules", ".next", "dist", "build", "packages/**/src"]
 }
