--- a/package.json
+++ b/package.json
@@ -123,7 +123,12 @@
     "remask": "^1.2.2",
     "swr": "^2.3.6",
     "tsx": "^4.20.5",
-    "yup": "^1.7.0"
+    "yup": "^1.7.0",
+    "@anpdgovbr/rbac-core": "^0.1.0-beta.1",
+    "@anpdgovbr/rbac-provider": "^0.1.0-beta.1",
+    "@anpdgovbr/rbac-prisma": "^0.1.0-beta.1",
+    "@anpdgovbr/rbac-next": "^0.1.0-beta.1",
+    "@anpdgovbr/rbac-react": "^0.1.0-beta.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.34.0",
