refactor: update withPermissao import and options across the application
- Changed import of withPermissao from local hoc to @anpdgovbr/rbac-react in multiple files.
- Updated option name from 'redirecionar' to 'redirect' in permission wrappers.
- Enhanced API routes for permissions and profiles, adding new POST handlers and improving GET logic.
- Introduced a new toggle route for permissions management.
- Added RbacAdminDashboardCard component to the dashboard for centralized RBAC management.
- Refactored permission checks to utilize @anpdgovbr/rbac-core for consistency.
- Removed deprecated withPermissao HOC in favor of the new implementation.
- Updated various components and hooks to align with the new RBAC structure and imports.
- Added audit logging functionality to relevant API routes.
- Adjusted TypeScript configuration to include declaration files.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,13 +1,13 @@
 [submodule "external/shared-types"]
 	path = external/shared-types
 	url = git@github.com:anpdgovbr/shared-types.git
-	branch = migrando-rbac
+	branch = main
 [submodule "external/docker-infra-pg"]
 	path = external/docker-infra-pg
 	url = git@github.com:anpdgovbr/docker-infra-pg.git
-	branch = migrando-rbac
+	branch = main
 
 [submodule "rbac"]
 	path = rbac
 	url = git@github.com:anpdgovbr/rbac.git
-	branch = migrando-rbac
+	branch = main
