--- a/.gitmodules
+++ b/.gitmodules
@@ -7,7 +7,7 @@
 	url = git@github.com:anpdgovbr/docker-infra-pg.git
 	branch = main
 
-[submodule "rbac"]
+[submodule "external/rbac"]
 	path = external/rbac
 	url = git@github.com:anpdgovbr/rbac.git
 	branch = main
