--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,13 +36,5 @@
     "next-env.d.ts",
     ".next/types/**/*.ts"
   ],
-  "exclude": [
-    "node_modules",
-    ".next",
-    "dist",
-    "build",
-    "packages/**/src",
-    "external/rbac/**",
-    "external/**"
-  ]
+  "exclude": ["node_modules", ".next", "dist", "build", "packages/**/src"]
 }
