refactor: atualizar configurações do ESLint e melhorar a estrutura do código
- Removido arquivos de configuração do ESLint obsoletos.
- Adicionadas novas regras e ajustes nas configurações do ESLint.
- Implementada a função para parsear origens permitidas no Next.js.
- Alterações em várias interfaces para melhorar a tipagem TypeScript.
- Ajustes em mensagens de erro e logs para melhor clareza.

--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,10 @@ AZURE_AD_TENANT_ID=
 CONTROLADORES_API_URL=http://localhost:4000
 NEXT_PUBLIC_CONTROLADORES_API_URL=http://localhost:4000
 
+# Allowed origins for Next server actions (comma-separated)
+# In production, do not include localhost or wildcards.
+ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000,https://dim.dev.anpd.gov.br
+
 # Seeds locais
 SEED_RESPONSAVEIS_JSON='[{"nome":""},{"nome":""},{"nome":""}]'
 SEED_USERS_JSON='[{"email":"","nome":"","perfil":""}]'
