--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
     "docs:clean": "rimraf .typedocs public/docs || true",
     "docs:build": "npm run docs:typedoc",
     "docs": "npm run docs:build",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
     "prepare": "husky",
     "pre-commit": "lint-staged",
     "prisma:migrate": "npx prisma migrate dev --name init",
@@ -104,8 +107,8 @@
     "@emotion/styled": "^11.14.1",
     "@govbr-ds/core": "^3.6.2",
     "@hookform/resolvers": "^5.2.1",
-    "@mui/icons-material": "^7.3.1",
-    "@mui/material": "^7.3.1",
+    "@mui/icons-material": "^7.3.2",
+    "@mui/material": "^7.3.2",
     "@mui/x-data-grid": "^8.11.0",
     "@prisma/client": "^6.15.0",
     "dayjs": "^1.11.18",
@@ -121,30 +124,31 @@
     "recharts": "^3.1.2",
     "remask": "^1.2.2",
     "swr": "^2.3.6",
-    "yup": "^1.7.0"
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.34.0",
     "@next/eslint-plugin-next": "^15.5.2",
     "@types/lodash": "^4.17.20",
-    "@types/next-auth": "^3.15.0",
     "@types/node": "^24.3.0",
     "@types/papaparse": "^5.3.16",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@typescript-eslint/eslint-plugin": "^8.41.0",
-    "@typescript-eslint/parser": "^8.41.0",
+    "@typescript-eslint/eslint-plugin": "^8.42.0",
+    "@typescript-eslint/parser": "^8.42.0",
+    "@vitest/coverage-v8": "^3.2.4",
     "cross-env": "^10.0.0",
     "eslint": "^9.34.0",
     "eslint-config-next": "^15.5.2",
     "eslint-plugin-filenames": "^1.3.2",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "tsx": "^4.20.5",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.6",
     "prettier": "^3.6.2",
     "prisma": "^6.15.0",
+    "tsx": "^4.20.5",
     "typedoc": "^0.28.12",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "vitest": "^3.2.4"
   }
 }
