--- a/package.json
+++ b/package.json
@@ -101,12 +101,12 @@
     ]
   },
   "dependencies": {
-    "@anpdgovbr/rbac-admin": "^0.2.0-beta.4",
-    "@anpdgovbr/rbac-core": "^0.1.1-beta.4",
-    "@anpdgovbr/rbac-next": "^0.1.1-beta.4",
-    "@anpdgovbr/rbac-prisma": "^0.1.1-beta.4",
-    "@anpdgovbr/rbac-provider": "^0.1.1-beta.4",
-    "@anpdgovbr/rbac-react": "^0.2.0-beta.2",
+    "@anpdgovbr/rbac-admin": "^0.2.1-beta.0",
+    "@anpdgovbr/rbac-core": "^0.1.2",
+    "@anpdgovbr/rbac-next": "^0.1.2",
+    "@anpdgovbr/rbac-prisma": "^0.1.2",
+    "@anpdgovbr/rbac-provider": "^0.1.2",
+    "@anpdgovbr/rbac-react": "^0.2.1",
     "@anpdgovbr/shared-types": "^0.1.5-beta",
     "@anpdgovbr/shared-ui": "^0.3.4-beta.0",
     "@emotion/react": "^11.14.0",
