feat: integrate Keycloak for authentication and implement token refresh mechanism
- Replaced AzureADProvider with KeycloakProvider in next-auth configuration.
- Added refresh token logic to automatically renew access tokens.
- Implemented SLO (Single Logout) endpoint to handle logout requests.
- Enhanced audit logging for sign-in and sign-out events.
- Updated various components to improve UI responsiveness and styling.
- Introduced new TopListCard component for displaying top items in a dashboard.
- Added documentation for Keycloak setup and integration.

--- a/.env.example
+++ b/.env.example
@@ -13,13 +13,24 @@ NODE_ENV=development
 PORT=3000
 
 # Autenticação (NextAuth)
+# DEV local
 NEXTAUTH_URL=http://localhost:3000
+# HML (exemplo):
+# NEXTAUTH_URL=https://dim.dev.anpd.gov.br
 NEXTAUTH_SECRET=changeme
+NEXT_PUBLIC_AUTH_PROVIDER=keycloak
+# Origens permitidas para ações do servidor Next (separadas por vírgula)
+ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000,https://dim.dev.anpd.gov.br
 
-# Azure AD
-AZURE_AD_CLIENT_ID=
-AZURE_AD_CLIENT_SECRET=
-AZURE_AD_TENANT_ID=
+# Keycloak (ANPD)
+# URL emissor do realm (inclui /realms/<realm>)
+# Ex.: http://localhost:8080/realms/ANPD  ou  https://iam.dev.anpd.gov.br/auth/realms/ANPD
+KEYCLOAK_ISSUER=
+KEYCLOAK_CLIENT_ID=
+KEYCLOAK_CLIENT_SECRET=
+
+# TLS (opcional, uso local com KC self-signed)
+# NODE_TLS_REJECT_UNAUTHORIZED=0
 
 # API interna
 CONTROLADORES_API_URL=http://localhost:4000
