--- a/package.json
+++ b/package.json
@@ -107,7 +107,7 @@
     "@anpdgovbr/rbac-prisma": "^0.1.2",
     "@anpdgovbr/rbac-provider": "^0.1.2",
     "@anpdgovbr/rbac-react": "^0.2.2",
-    "@anpdgovbr/shared-types": "^0.1.5-beta",
+    "@anpdgovbr/shared-types": "^0.1.7-beta-1",
     "@anpdgovbr/shared-ui": "^0.3.4-beta.7",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
