--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@anpdgovbr/backlog-dim",
-  "version": "0.4.0",
+  "version": "0.4.3",
   "private": true,
   "type": "module",
-  "description": "Aplicação CRUD para gerenciar processamentos administrativos relacionados à atuação da DIM na ANPD. Sistema moderno, seguro e escalável, desenvolvido com React, Next.js, TypeScript e Prisma.",
+  "description": "Aplicação para gerenciar processos relacionados à peticionamento e denúncias sobre a LGPD",
   "keywords": [
     "react",
     "crud",
@@ -35,6 +35,7 @@
     "build-routes": "node scripts/generateDevRoutes.cjs",
     "build-routes:verbose": "node scripts/generateDevRoutes.cjs --verbose",
     "bump": "node scripts/bump-version.cjs",
+    "bump:stage": "node scripts/bump-version-stage.cjs",
     "bump:patch": "node scripts/bump-version-advanced.cjs patch",
     "bump:minor": "node scripts/bump-version-advanced.cjs minor",
     "bump:major": "node scripts/bump-version-advanced.cjs major",
@@ -107,7 +108,7 @@
     "@anpdgovbr/rbac-prisma": "^0.1.2",
     "@anpdgovbr/rbac-provider": "^0.1.2",
     "@anpdgovbr/rbac-react": "^0.2.2",
-    "@anpdgovbr/shared-types": "^0.1.7-beta-3",
+    "@anpdgovbr/shared-types": "^0.1.7-beta-4",
     "@anpdgovbr/shared-ui": "^0.3.4-beta.7",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
@@ -115,12 +116,12 @@
     "@hookform/resolvers": "^5.2.1",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
-    "@mui/x-data-grid": "^8.11.1",
-    "@prisma/client": "^6.16.0",
+    "@mui/x-data-grid": "^8.11.2",
+    "@prisma/client": "^6.16.1",
     "dayjs": "^1.11.18",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
-    "next": "^15.5.2",
+    "next": "^15.5.3",
     "next-auth": "^4.24.11",
     "papaparse": "^5.5.3",
     "react": "^19.1.1",
@@ -130,11 +131,11 @@
     "recharts": "^3.2.0",
     "remask": "^1.2.2",
     "swr": "^2.3.6",
-    "zod": "^4.1.5"
+    "zod": "^4.1.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
-    "@next/eslint-plugin-next": "^15.5.2",
+    "@next/eslint-plugin-next": "^15.5.3",
     "@types/lodash": "^4.17.20",
     "@types/node": "^24.3.1",
     "@types/papaparse": "^5.3.16",
@@ -145,13 +146,13 @@
     "@vitest/coverage-v8": "^3.2.4",
     "cross-env": "^10.0.0",
     "eslint": "^9.35.0",
-    "eslint-config-next": "^15.5.2",
+    "eslint-config-next": "^15.5.3",
     "eslint-plugin-filenames": "^1.3.2",
     "eslint-plugin-react-hooks": "^5.2.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.6",
     "prettier": "^3.6.2",
-    "prisma": "^6.16.0",
+    "prisma": "^6.16.1",
     "tsx": "^4.20.5",
     "typedoc": "^0.28.12",
     "typescript": "^5.9.2",
