refactor: incluir dependências de desenvolvimento na instalação do CI e CodeQL

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -35,7 +35,9 @@ jobs:
           cache: "npm"
 
       - name: Install dependencies
-        run: npm ci --no-audit --no-fund
+        env:
+          NODE_ENV: development
+        run: npm ci --no-audit --no-fund --include=dev
 
       # Gerar cliente Prisma antes do build
       - run: npx prisma generate
