--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,9 @@ jobs:
             ${{ runner.os }}-prisma-
 
       - name: Install dependencies
-        run: npm ci --no-audit --no-fund
+        env:
+          NODE_ENV: development
+        run: npm ci --no-audit --no-fund --include=dev
 
       # Gerar cliente Prisma antes de qualquer checagem
       - run: npx prisma generate
