--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -12,6 +12,9 @@ env:
   DATABASE_URL: "postgresql://user:password@localhost:5432/test_db"
   # Desabilita hooks do Husky no ambiente de CI
   HUSKY: "0"
+  # Garante instalação de devDependencies em qualquer ambiente
+  NODE_ENV: development
+  npm_config_production: "false"
 
 jobs:
   analyze:
@@ -35,9 +38,7 @@ jobs:
           cache: "npm"
 
       - name: Install dependencies
-        env:
-          NODE_ENV: development
-        run: npm ci --no-audit --no-fund --include=dev
+        run: npm ci --no-audit --no-fund --omit=dev=false
 
       # Gerar cliente Prisma antes do build
       - run: npx prisma generate
