--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,10 +36,10 @@ jobs:
             ${{ runner.os }}-prisma-
 
       - name: Install dependencies
-        run: npm ci --no-audit --no-fund --omit=dev=false
+        run: npm ci --no-audit --no-fund --include=dev
 
-      # Gerar cliente Prisma antes de qualquer checagem
-      - run: npx prisma generate
+      # Gerar cliente Prisma antes de qualquer checagem (sem auto-instalar via npx)
+      - run: npx --no-install prisma generate
 
       # Checagens estáticas primeiro (mais rápidas)
       - run: npm run type-check
