--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -38,10 +38,10 @@ jobs:
           cache: "npm"
 
       - name: Install dependencies
-        run: npm ci --no-audit --no-fund --omit=dev=false
+        run: npm ci --no-audit --no-fund --include=dev
 
-      # Gerar cliente Prisma antes do build
-      - run: npx prisma generate
+      # Gerar cliente Prisma antes do build (sem auto-instalar via npx)
+      - run: npx --no-install prisma generate
 
       - run: npm run build --if-present
 
