--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,12 @@ jobs:
             ${{ runner.os }}-prisma-
 
       - name: Install dependencies
-        run: npm ci --no-audit --no-fund --include=dev
+        run: npm ci --no-audit --no-fund --omit=dev=false
+
+      - name: Ensure Prisma packages present
+        run: |
+          node -e "try{require.resolve('prisma/package.json');process.exit(0)}catch(e){process.exit(1)}" || npm i -D prisma@6.16.1 --no-audit --no-fund
+          node -e "try{require.resolve('@prisma/client/package.json');process.exit(0)}catch(e){process.exit(1)}" || npm i @prisma/client@6.16.1 --no-audit --no-fund
 
       # Gerar cliente Prisma antes de qualquer checagem (sem auto-instalar via npx)
       - run: npx --no-install prisma generate
