chore(ci): sync lockfile

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -50,13 +50,8 @@ jobs:
             npm install --no-audit --no-fund --legacy-peer-deps
           fi
 
-      - name: Ensure Prisma packages present
-        run: |
-          node -e "try{require.resolve('prisma/package.json');process.exit(0)}catch(e){process.exit(1)}" || npm i -D prisma@6.16.1 --no-audit --no-fund
-          node -e "try{require.resolve('@prisma/client/package.json');process.exit(0)}catch(e){process.exit(1)}" || npm i @prisma/client@6.16.1 --no-audit --no-fund
-
       # Gerar cliente Prisma antes do build (sem auto-instalar via npx)
-      - run: npx --no-install prisma generate
+      - run: node node_modules/prisma/build/index.js generate
 
       - run: npm run build --if-present
 
