--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,13 +48,8 @@ jobs:
             npm install --no-audit --no-fund --legacy-peer-deps
           fi
 
-      - name: Ensure Prisma packages present
-        run: |
-          node -e "try{require.resolve('prisma/package.json');process.exit(0)}catch(e){process.exit(1)}" || npm i -D prisma@6.16.1 --no-audit --no-fund
-          node -e "try{require.resolve('@prisma/client/package.json');process.exit(0)}catch(e){process.exit(1)}" || npm i @prisma/client@6.16.1 --no-audit --no-fund
-
       # Gerar cliente Prisma antes de qualquer checagem (sem auto-instalar via npx)
-      - run: npx --no-install prisma generate
+      - run: node node_modules/prisma/build/index.js generate
 
       # Checagens estáticas primeiro (mais rápidas)
       - run: npm run type-check
