chore(ci): sync lockfile

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@anpdgovbr/backlog-dim",
-  "version": "0.4.14",
+  "version": "0.4.15",
   "private": true,
   "type": "module",
   "description": "Aplicação para gerenciar processos relacionados à peticionamento e denúncias sobre a LGPD",
@@ -117,7 +117,7 @@
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "@mui/x-data-grid": "^8.11.2",
-    "@prisma/client": "^6.16.1",
+    "@prisma/client": "6.16.1",
     "dayjs": "^1.11.18",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
@@ -152,7 +152,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.1.6",
     "prettier": "^3.6.2",
-    "prisma": "^6.16.1",
+    "prisma": "6.16.1",
     "tsx": "^4.20.5",
     "typedoc": "^0.28.12",
     "typescript": "^5.9.2",
