--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@anpdgovbr/backlog-dim",
-  "version": "0.4.16",
+  "version": "0.4.17",
   "private": true,
   "type": "module",
   "description": "Aplicação para gerenciar processos relacionados à peticionamento e denúncias sobre a LGPD",
@@ -136,11 +136,31 @@
   "devDependencies": {
     "@eslint/js": "^9.35.0",
     "@next/eslint-plugin-next": "^15.5.3",
+    "@types/chai": "^4.3.11",
+    "@types/d3-array": "^3.2.1",
+    "@types/d3-color": "^3.1.3",
+    "@types/d3-ease": "^3.0.2",
+    "@types/d3-interpolate": "^3.0.4",
+    "@types/d3-path": "^3.0.2",
+    "@types/d3-scale": "^4.0.8",
+    "@types/d3-shape": "^3.1.6",
+    "@types/d3-time": "^3.0.3",
+    "@types/d3-timer": "^3.0.1",
     "@types/lodash": "^4.17.20",
     "@types/node": "^24.3.1",
     "@types/papaparse": "^5.3.16",
+    "@types/prop-types": "^15.7.12",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-transition-group": "^4.4.10",
+    "@types/estree": "^1.0.6",
+    "@types/hast": "^3.0.4",
+    "@types/unist": "^3.0.2",
+    "@types/json-schema": "^7.0.15",
+    "@types/json5": "^0.0.29",
+    "@types/parse-json": "^4.0.1",
+    "@types/intl": "^1.2.0",
+    "@types/use-sync-external-store": "^0.0.3",
     "@typescript-eslint/eslint-plugin": "^8.43.0",
     "@typescript-eslint/parser": "^8.43.0",
     "@vitest/coverage-v8": "^3.2.4",
