--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "verbatimModuleSyntax": true,
-    "types": ["node", "react", "react-dom"],
+    "skipDefaultLibCheck": true,
     "plugins": [
       {
         "name": "next"
