fix: corrigir nome da ANPD para "Agência Nacional de Proteção de Dados" no LICENSE e README.md

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "type": "git",
     "url": "https://github.com/anpdgovbr/backlog-dim.git"
   },
-  "author": "ANPD (Autoridade Nacional de Proteção de Dados) <desenvolvimento@anpd.gov.br>",
+  "author": "ANPD (Agência Nacional de Proteção de Dados) <desenvolvimento@anpd.gov.br>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/anpdgovbr/backlog-dim/issues"
