fix: corrigir nome da ANPD para "Agência Nacional de Proteção de Dados" no LICENSE e README.md

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
       "@/config/*": ["./src/config/*"],
       "@/*": ["./src/*"],
       "@scripts/*": ["scripts/*"]
-    }
+    },
+    "types": ["node", "react", "react-dom", "vitest/globals"]
   },
   "include": [
     "**/*.ts",
