--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: "20"
-          cache: "npm"
+          cache: "pnpm"
 
       # Cache dos artefatos do Prisma para acelerar builds
       - uses: actions/cache@v4
@@ -38,24 +38,20 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-prisma-
 
-      - name: Install dependencies (ci with safe fallback)
+      - name: Install dependencies with pnpm
         run: |
-          echo "Instalando dependências com npm ci..."
-          if npm ci --no-audit --no-fund --include=dev; then
-            echo "npm ci concluído."
-          else
-            echo "npm ci falhou; tentando npm install (atualiza lock no runner)..."
-            npm install --no-audit --no-fund --legacy-peer-deps --include=dev
-          fi
+          corepack enable
+          corepack prepare pnpm@8.10.1 --activate
+          pnpm install --frozen-lockfile
 
       # Não gerar Prisma aqui; o script de build já cuida disso
 
       # Checagens estáticas primeiro (mais rápidas)
-      - run: npm run type-check
-      - run: npm run lint
+      - run: pnpm run type-check
+      - run: pnpm run lint
 
       # Testes antes do build (falham mais rápido)
-      - run: npm test
+      - run: pnpm test
 
       # Build por último (mais demorado)
-      - run: npm run build
+      - run: pnpm run build
