--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -38,21 +38,16 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: "20"
-          cache: "npm"
+          cache: "pnpm"
 
-      - name: Install dependencies (ci with safe fallback)
+      - name: Install dependencies with pnpm
         run: |
-          echo "Instalando dependências com npm ci..."
-          if npm ci --no-audit --no-fund --include=dev; then
-            echo "npm ci concluído."
-          else
-            echo "npm ci falhou; tentando npm install (atualiza lock no runner)..."
-            npm install --no-audit --no-fund --legacy-peer-deps --include=dev
-          fi
+          corepack enable
+          corepack prepare pnpm@8.10.1 --activate
+          pnpm install --frozen-lockfile
 
       # Não gerar Prisma aqui; o script de build já cuida disso
-
-      - run: npm run build --if-present
+      - run: pnpm run build --if-present
 
       - uses: github/codeql-action/init@v3
         with:
