--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,12 @@ jobs:
           corepack prepare pnpm@10.17.1 --activate
           pnpm install --frozen-lockfile
 
+      - name: Show Node/npm/pnpm versions
+        run: |
+          node -v
+          npm -v
+          pnpm -v || true
+
       # Não gerar Prisma aqui; o script de build já cuida disso
 
       # Checagens estáticas primeiro (mais rápidas)
