--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,10 +22,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 10
+
       - uses: actions/setup-node@v5
         with:
           node-version: "20"
-          cache: "npm"
+          cache: "pnpm"
 
       # Cache dos artefatos do Prisma para acelerar builds
       - uses: actions/cache@v4
@@ -38,10 +42,7 @@ jobs:
             ${{ runner.os }}-prisma-
 
       - name: Install dependencies with pnpm
-        run: |
-          corepack enable
-          corepack prepare pnpm@10.17.1 --activate
-          pnpm install --frozen-lockfile
+        run: pnpm install --frozen-lockfile
 
       - name: Show Node/npm/pnpm versions
         run: |
