--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -35,16 +35,17 @@ jobs:
       - uses: actions/checkout@v5
 
       # Preparar Node para builds/instalação
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 10
+
       - uses: actions/setup-node@v5
         with:
           node-version: "20"
-          cache: "npm"
+          cache: "pnpm"
 
       - name: Install dependencies with pnpm
-        run: |
-          corepack enable
-          corepack prepare pnpm@10.17.1 --activate
-          pnpm install --frozen-lockfile
+        run: pnpm install --frozen-lockfile
 
       - name: Show Node/npm/pnpm versions
         run: |
