--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -41,7 +41,7 @@ jobs:
 
       - uses: actions/setup-node@v5
         with:
-          node-version: "20"
+          node-version: "22"
           cache: "pnpm"
 
       - name: Install dependencies with pnpm
@@ -54,7 +54,7 @@ jobs:
           pnpm -v || true
 
       # Não gerar Prisma aqui; o script de build já cuida disso
-      - run: pnpm run build --if-present
+      - run: pnpm run build
 
       - uses: github/codeql-action/init@v3
         with:
