--- a/package.json
+++ b/package.json
@@ -89,8 +89,7 @@
     ]
   },
   "engines": {
-    "node": ">=20.0.0",
-    "npm": ">=10.0.0"
+    "node": ">=22.0.0"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
@@ -102,14 +101,14 @@
     ]
   },
   "dependencies": {
-    "@anpdgovbr/rbac-admin": "^0.2.1-beta.0",
+    "@anpdgovbr/rbac-admin": "0.2.1-beta.0",
     "@anpdgovbr/rbac-core": "^0.1.3",
     "@anpdgovbr/rbac-next": "^0.1.2",
     "@anpdgovbr/rbac-prisma": "^0.1.2",
     "@anpdgovbr/rbac-provider": "^0.1.2",
     "@anpdgovbr/rbac-react": "^0.2.3",
-    "@anpdgovbr/shared-types": "^0.2.1-beta-0",
-    "@anpdgovbr/shared-ui": "^0.3.5-beta.1",
+    "@anpdgovbr/shared-types": "0.2.1-beta-0",
+    "@anpdgovbr/shared-ui": "0.3.5-beta.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@govbr-ds/core": "^3.6.2",
@@ -146,20 +145,20 @@
     "@types/d3-shape": "^3.1.7",
     "@types/d3-time": "^3.0.4",
     "@types/d3-timer": "^3.0.2",
+    "@types/estree": "^1.0.8",
+    "@types/hast": "^3.0.4",
+    "@types/intl": "^1.2.2",
+    "@types/json-schema": "^7.0.15",
+    "@types/json5": "^2.2.0",
     "@types/lodash": "^4.17.20",
     "@types/node": "^24.5.2",
     "@types/papaparse": "^5.3.16",
-    "@types/prop-types": "^15.7.15",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@types/react-transition-group": "^4.4.12",
-    "@types/estree": "^1.0.8",
-    "@types/hast": "^3.0.4",
-    "@types/unist": "^3.0.3",
-    "@types/json-schema": "^7.0.15",
-    "@types/json5": "^2.2.0",
     "@types/parse-json": "^7.0.0",
-    "@types/intl": "^1.2.2",
+    "@types/prop-types": "^15.7.15",
+    "@types/react": "^19.1.14",
+    "@types/react-dom": "^19.1.9",
+    "@types/react-transition-group": "^4.4.12",
+    "@types/unist": "^3.0.3",
     "@types/use-sync-external-store": "^1.5.0",
     "@typescript-eslint/eslint-plugin": "^8.44.1",
     "@typescript-eslint/parser": "^8.44.1",
