--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -13,7 +13,7 @@ env:
   # Desabilita hooks do Husky no ambiente de CI
   HUSKY: "0"
   # Força instalação de devDeps e reduz ruído do npm
-  NODE_ENV: development
+  NODE_ENV: production
   npm_config_production: "false"
   NPM_CONFIG_FUND: "false"
   NPM_CONFIG_AUDIT: "false"
