--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -47,13 +47,15 @@ jobs:
       - name: Install dependencies with pnpm
         run: pnpm install --frozen-lockfile
 
+      - name: Generate Prisma Client
+        run: pnpm exec prisma generate
+
       - name: Show Node/npm/pnpm versions
         run: |
           node -v
           npm -v
           pnpm -v || true
 
-      # Não gerar Prisma aqui; o script de build já cuida disso
       - run: pnpm run build
 
       - uses: github/codeql-action/init@v3
