--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@anpdgovbr/backlog-dim",
-  "version": "0.4.24",
+  "version": "0.4.25",
   "private": true,
   "type": "module",
   "description": "Aplicação para gerenciar processos relacionados à peticionamento e denúncias sobre a LGPD",
@@ -101,39 +101,39 @@
     ]
   },
   "dependencies": {
-    "@anpdgovbr/rbac-admin": "0.2.1-beta.0",
+    "@anpdgovbr/rbac-admin": "0.2.2-beta.0",
     "@anpdgovbr/rbac-core": "^0.1.3",
     "@anpdgovbr/rbac-next": "^0.1.2",
     "@anpdgovbr/rbac-prisma": "^0.1.2",
     "@anpdgovbr/rbac-provider": "^0.1.2",
     "@anpdgovbr/rbac-react": "^0.2.3",
-    "@anpdgovbr/shared-types": "0.2.1-beta-0",
-    "@anpdgovbr/shared-ui": "0.3.5-beta.1",
+    "@anpdgovbr/shared-types": "0.2.2-beta.0",
+    "@anpdgovbr/shared-ui": "0.3.6-beta.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@govbr-ds/core": "^3.6.2",
     "@hookform/resolvers": "^5.2.2",
-    "@mui/icons-material": "^7.3.2",
-    "@mui/material": "^7.3.2",
-    "@mui/x-data-grid": "^8.12.1",
-    "@prisma/client": "6.16.2",
+    "@mui/icons-material": "^7.3.4",
+    "@mui/material": "^7.3.4",
+    "@mui/x-data-grid": "^8.13.1",
+    "@prisma/client": "6.16.3",
     "dayjs": "^1.11.18",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "next": "^15.5.4",
     "next-auth": "^4.24.11",
     "papaparse": "^5.5.3",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-hook-form": "^7.63.0",
-    "react-lgpd-consent": "^0.4.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-hook-form": "^7.64.0",
+    "react-lgpd-consent": "^0.4.4",
     "recharts": "^3.2.1",
     "remask": "^1.2.2",
     "swr": "^2.3.6",
-    "zod": "^4.1.11"
+    "zod": "^4.1.12"
   },
   "devDependencies": {
-    "@eslint/js": "^9.36.0",
+    "@eslint/js": "^9.37.0",
     "@next/eslint-plugin-next": "^15.5.4",
     "@types/chai": "^5.2.2",
     "@types/d3-array": "^3.2.2",
@@ -151,30 +151,30 @@
     "@types/json-schema": "^7.0.15",
     "@types/json5": "^2.2.0",
     "@types/lodash": "^4.17.20",
-    "@types/node": "^24.5.2",
+    "@types/node": "^24.7.0",
     "@types/papaparse": "^5.3.16",
     "@types/parse-json": "^7.0.0",
     "@types/prop-types": "^15.7.15",
-    "@types/react": "^19.1.14",
-    "@types/react-dom": "^19.1.9",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.1",
     "@types/react-transition-group": "^4.4.12",
     "@types/unist": "^3.0.3",
     "@types/use-sync-external-store": "^1.5.0",
-    "@typescript-eslint/eslint-plugin": "^8.44.1",
-    "@typescript-eslint/parser": "^8.44.1",
+    "@typescript-eslint/eslint-plugin": "^8.46.0",
+    "@typescript-eslint/parser": "^8.46.0",
     "@vitest/coverage-v8": "^3.2.4",
-    "cross-env": "^10.0.0",
-    "eslint": "^9.36.0",
+    "cross-env": "^10.1.0",
+    "eslint": "^9.37.0",
     "eslint-config-next": "^15.5.4",
     "eslint-plugin-filenames": "^1.3.2",
     "eslint-plugin-react-hooks": "^5.2.0",
     "husky": "^9.1.7",
-    "lint-staged": "^16.2.1",
+    "lint-staged": "^16.2.3",
     "prettier": "^3.6.2",
-    "prisma": "6.16.2",
+    "prisma": "6.16.3",
     "tsx": "^4.20.6",
     "typedoc": "^0.28.13",
-    "typescript": "^5.9.2",
+    "typescript": "^5.9.3",
     "vitest": "^3.2.4"
   }
 }
