--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "@mui/material": "^7.3.4",
     "@mui/x-data-grid": "^8.14.0",
     "@prisma/client": "6.17.1",
+    "critters": "^0.0.25",
     "dayjs": "^1.11.18",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
