feat: add script to copy public files to Next.js standalone build directory

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "url": "https://github.com/anpdgovbr/backlog-dim/issues"
   },
   "scripts": {
-    "build": "prisma generate && next build",
+    "build": "prisma generate && next build && pnpm run postbuild",
+    "postbuild": "node scripts/copy-public-to-standalone.cjs",
     "build-routes": "node scripts/generateDevRoutes.cjs",
     "build-routes:verbose": "node scripts/generateDevRoutes.cjs --verbose",
     "bump": "node scripts/bump-version.cjs",
@@ -40,13 +41,13 @@
     "bump:minor": "node scripts/bump-version-advanced.cjs minor",
     "bump:major": "node scripts/bump-version-advanced.cjs major",
     "db:seed": "npx tsx prisma/seed.ts",
-    "dev": "npm run prebuild && next dev --turbopack",
+    "dev": "pnpm run prebuild && next dev --turbopack",
     "format": "prettier --write \"**/*.{ts,tsx,css,json}\"",
     "generate:version": "node scripts/generate-version.cjs",
     "lint": "npx eslint \"**/*.{ts,tsx}\" --fix",
     "lint-staged": "lint-staged",
     "version:env": "node scripts/set-version-env.cjs",
-    "prebuild": "npm run version:env && npm run generate:version && npm run build-routes",
+    "prebuild": "pnpm run version:env && pnpm run generate:version && pnpm run build-routes",
     "docs:typedoc": "typedoc --options typedoc.json",
     "docs:clean": "rimraf .typedocs public/docs || true",
     "docs:build": "npm run docs:typedoc",
