up develop fixes

--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
-# Configuração do pnpm para o backlog-dim
-
-# Registry oficial do npm
-registry=https://registry.npmjs.org/
+registry=https://npm.dev.anpd.gov.br/
+strict-ssl=true
+cafile=/etc/ssl/certs/anpd-root-ca.pem
+shared-workspace-lockfile=false
