--- a/package.json
+++ b/package.json
@@ -136,6 +136,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.38.0",
+    "@next/codemod": "^16.0.0",
     "@next/eslint-plugin-next": "^15.5.6",
     "@types/chai": "^5.2.3",
     "@types/d3-array": "^3.2.2",
