fix(cookie-banner): replace double quotes with HTML entities for consistency in text fix(simple-cookie-banner): replace double quotes with HTML entities for consistency in text chore(tsconfig): update JSX setting to react-jsx and format paths and types for clarity

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "incremental": true,
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
@@ -36,7 +36,8 @@
     "**/*.d.ts",
     "next-auth.d.ts",
     "next-env.d.ts",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    ".next/dev/types/**/*.ts"
   ],
   "exclude": ["node_modules", ".next", "dist", "build", "packages/**/src"]
 }
