91 trocar api de controladores (#93)
* adicionar endpoint GET para verificar status da API

* atualizar versões das dependências next, react-lgpd-consent, @next/eslint-plugin-next e eslint-config-next

* atualizar referências de "Diretoria de Investigação e Monitoramento" para "Divisão de Monitoramento" nas páginas Home, Público e Sobre

* remover seções de risco, rollout, rollback, issues relacionadas e notas aos revisores do template de pull request

* Set standalone NextJS config

* feat: update data types and API integration for Requerido and Controlador components

- Changed id types from number to string in ProcessoDataGrid and RequeridoDataGrid.
- Updated handleDelete functions to accept string ids.
- Refactored RequeridoForm to use new data structure and validation logic.
- Enhanced CnaeDropdownSection and RequeridoDropdownSection to reflect updated data models.
- Introduced useEncarregados hook for fetching Encarregado data.
- Modified useCnae and useControladores hooks to return paginated responses.
- Created controladoresApi utility for API URL construction and response parsing.
- Removed deprecated RequeridoOutput interface and simplified types.
- Updated TopRequeridos interface to use string identifiers and optional fields.

* feat: implementar migração para controle de UUIDs de Requeridos e ajustes no schema

* up develop fixes

* fix: corrigir verificação de module.exports e alterar logs para console.warn

* fix: adicionar .npmrc ao .gitignore

* Refactor code structure for improved readability and maintainability

* fix: adicionar desativação de eslint para verificação de module.exports

* debug: adiciona logs detalhados para investigar problema de data vazio no /api/setor

* fix: ajustar logs no parseControladoresJson para melhor rastreamento de resposta

* fix: workaround para bug da API Quarkus que retorna data vazio com orderBy/ascending

A API Quarkus /api/setor retorna data:[] vazio quando recebe os parâmetros
orderBy e ascending, mesmo calcula

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ ecosystem.config.cjs
 # next.js
 /.next/
 /out/
+.npmrc
 
 # production
 /build
@@ -40,6 +41,7 @@ yarn-error.log*
 package-lock.json
 
 # env files (can opt-in for committing if needed)
+.env.production
 .env.local
 .env
 
