--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@anpdgovbr/backlog-dim",
-  "version": "0.4.34",
+  "version": "0.5.42",
   "private": true,
   "type": "module",
   "description": "Aplicação para gerenciar processos relacionados à peticionamento e denúncias sobre a LGPD",
@@ -109,7 +109,7 @@
     "@anpdgovbr/rbac-provider": "^0.1.3",
     "@anpdgovbr/rbac-react": "^0.2.4",
     "@anpdgovbr/shared-types": "0.3.1-beta.0",
-    "@anpdgovbr/shared-ui": "0.3.8-beta.1",
+    "@anpdgovbr/shared-ui": "0.3.9-beta.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@govbr-ds/core": "^3.6.2",
@@ -122,7 +122,7 @@
     "dayjs": "^1.11.18",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
-    "next": "^15.5.6",
+    "next": "^16.0.0",
     "next-auth": "^4.24.11",
     "papaparse": "^5.5.3",
     "react": "^19.2.0",
@@ -136,7 +136,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.38.0",
-    "@next/eslint-plugin-next": "^15.5.6",
+    "@next/codemod": "^16.0.0",
+    "@next/eslint-plugin-next": "^16.0.0",
     "@types/chai": "^5.2.3",
     "@types/d3-array": "^3.2.2",
     "@types/d3-color": "^3.1.3",
@@ -164,10 +165,10 @@
     "@types/use-sync-external-store": "^1.5.0",
     "@typescript-eslint/eslint-plugin": "^8.46.2",
     "@typescript-eslint/parser": "^8.46.2",
-    "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/coverage-v8": "^4.0.2",
     "cross-env": "^10.1.0",
     "eslint": "^9.38.0",
-    "eslint-config-next": "^15.5.6",
+    "eslint-config-next": "^16.0.0",
     "eslint-plugin-filenames": "^1.3.2",
     "eslint-plugin-react-hooks": "^7.0.0",
     "husky": "^9.1.7",
@@ -177,6 +178,6 @@
     "tsx": "^4.20.6",
     "typedoc": "^0.28.14",
     "typescript": "^5.9.3",
-    "vitest": "^3.2.4"
+    "vitest": "^4.0.2"
   }
 }
