--- a/package.json
+++ b/package.json
@@ -102,14 +102,14 @@
     ]
   },
   "dependencies": {
-    "@anpdgovbr/rbac-admin": "0.3.0-beta.0",
-    "@anpdgovbr/rbac-core": "^0.1.4",
-    "@anpdgovbr/rbac-next": "^0.1.3",
-    "@anpdgovbr/rbac-prisma": "^0.1.3",
-    "@anpdgovbr/rbac-provider": "^0.1.3",
-    "@anpdgovbr/rbac-react": "^0.2.4",
+    "@anpdgovbr/rbac-admin": "0.4.0",
+    "@anpdgovbr/rbac-core": "^0.2.0",
+    "@anpdgovbr/rbac-next": "^0.2.0",
+    "@anpdgovbr/rbac-prisma": "^0.2.0",
+    "@anpdgovbr/rbac-provider": "^0.2.0",
+    "@anpdgovbr/rbac-react": "^0.3.0",
     "@anpdgovbr/shared-types": "0.3.1-beta.0",
-    "@anpdgovbr/shared-ui": "0.3.10-beta.0",
+    "@anpdgovbr/shared-ui": "0.3.11-beta.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@govbr-ds/core": "^3.6.2",
