--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "@hookform/resolvers": "^5.2.2",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
+    "@mui/material-nextjs": "^7.3.3",
     "@mui/x-data-grid": "^8.16.0",
     "@prisma/client": "6.18.0",
     "critters": "^0.0.25",
