feat: add setup-cross-platform and update-scripts for infrastructure management
- Introduced `setup-cross-platform.cjs` script for intelligent PostgreSQL infrastructure setup, including dynamic port detection and Docker configuration.
- Added `update-scripts.cjs` to facilitate updating infrastructure scripts from the repository.
- Updated `package.json` to reference new script locations and commands for improved infrastructure management.

--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,9 @@ ecosystem.config.cjs
 *.csr
 /logs/
 /infra-db/
-/.infra/
+/.infra/*
+!/.infra/scripts/
+!/.infra/scripts/**
 
 # debug
 npm-debug.log*
