--- a/package.json
+++ b/package.json
@@ -62,26 +62,26 @@
     "prisma:studio": "npx prisma studio",
     "start": "next start",
     "type-check": "tsc --noEmit",
-    "infra:setup": "curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/setup-cross-platform.js -o .infra/setup-cross-platform.cjs && curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/docker-helper.js -o .infra/docker-helper.cjs && curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/db-helper.js -o .infra/db-helper.cjs && node .infra/setup-cross-platform.cjs",
-    "infra:setup:manual": "curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/setup-cross-platform.js -o .infra/setup-cross-platform.cjs && curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/docker-helper.js -o .infra/docker-helper.cjs && curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/db-helper.js -o .infra/db-helper.cjs && node .infra/setup-cross-platform.cjs --manual",
-    "infra:setup:force": "curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/setup-cross-platform.js -o .infra/setup-cross-platform.cjs && curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/docker-helper.js -o .infra/docker-helper.cjs && curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/db-helper.js -o .infra/db-helper.cjs && node .infra/setup-cross-platform.cjs --force --auto",
-    "infra:up": "node .infra/docker-helper.cjs up",
-    "infra:down": "node .infra/docker-helper.cjs down",
-    "infra:logs": "node .infra/docker-helper.cjs logs",
-    "infra:reset": "node .infra/docker-helper.cjs reset",
-    "infra:clean": "node .infra/docker-helper.cjs clean",
-    "infra:psql": "node .infra/docker-helper.cjs psql",
-    "infra:status": "node .infra/docker-helper.cjs status",
-    "infra:backup": "node .infra/docker-helper.cjs backup",
-    "infra:db:init": "node .infra/db-helper.cjs setup",
-    "infra:db:fresh": "node .infra/db-helper.cjs fresh",
-    "infra:db:migrate": "node .infra/db-helper.cjs migrate",
-    "infra:db:seed": "node .infra/db-helper.cjs seed",
-    "infra:db:studio": "node .infra/db-helper.cjs studio",
-    "infra:db:reset": "node .infra/db-helper.cjs reset",
-    "infra:update": "curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/update-scripts.js -o .infra/update-scripts.cjs && node .infra/update-scripts.cjs",
-    "infra:debug": "curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/diagnostic.js -o .infra/diagnostic.cjs && node .infra/diagnostic.cjs",
-    "infra:fix": "curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/fix-credentials.js -o .infra/fix-credentials.cjs && node .infra/fix-credentials.cjs"
+    "infra:setup": "node .infra/scripts/setup-cross-platform.cjs",
+    "infra:setup:manual": "node .infra/scripts/setup-cross-platform.cjs --manual",
+    "infra:setup:force": "node .infra/scripts/setup-cross-platform.cjs --force --auto",
+    "infra:up": "node .infra/scripts/docker-helper.cjs up",
+    "infra:down": "node .infra/scripts/docker-helper.cjs down",
+    "infra:logs": "node .infra/scripts/docker-helper.cjs logs",
+    "infra:reset": "node .infra/scripts/docker-helper.cjs reset",
+    "infra:clean": "node .infra/scripts/docker-helper.cjs clean",
+    "infra:psql": "node .infra/scripts/docker-helper.cjs psql",
+    "infra:status": "node .infra/scripts/docker-helper.cjs status",
+    "infra:backup": "node .infra/scripts/docker-helper.cjs backup",
+    "infra:db:init": "node .infra/scripts/db-helper.cjs setup",
+    "infra:db:fresh": "node .infra/scripts/db-helper.cjs fresh",
+    "infra:db:migrate": "node .infra/scripts/db-helper.cjs migrate",
+    "infra:db:seed": "node .infra/scripts/db-helper.cjs seed",
+    "infra:db:studio": "node .infra/scripts/db-helper.cjs studio",
+    "infra:db:reset": "node .infra/scripts/db-helper.cjs reset",
+    "infra:update": "node .infra/scripts/update-scripts.cjs",
+    "infra:debug": "node .infra/scripts/diagnostic.cjs",
+    "infra:fix": "node .infra/scripts/fix-credentials.cjs"
   },
   "eslintConfig": {
     "extends": [
