--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "url": "https://github.com/anpdgovbr/backlog-dim/issues"
   },
   "scripts": {
-    "build": "prisma generate && next build && pnpm run postbuild",
+    "build": "prisma generate && cross-env NEXT_DISABLE_TURBOPACK=1 next build && pnpm run postbuild",
     "postbuild": "node scripts/copy-public-to-standalone.cjs",
     "build-routes": "node scripts/generateDevRoutes.cjs",
     "build-routes:verbose": "node scripts/generateDevRoutes.cjs --verbose",
@@ -137,7 +137,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.0",
-    "@next/codemod": "^16.0.1",
+    "@next/codemod": "^16.0.0",
     "@next/eslint-plugin-next": "^16.0.1",
     "@types/chai": "^5.2.3",
     "@types/d3-array": "^3.2.2",
