--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "url": "https://github.com/anpdgovbr/backlog-dim/issues"
   },
   "scripts": {
+    "postinstall": "prisma generate",
     "build": "prisma generate && cross-env NEXT_DISABLE_TURBOPACK=1 next build && pnpm run postbuild",
     "postbuild": "node scripts/copy-public-to-standalone.cjs",
     "build-routes": "node scripts/generateDevRoutes.cjs",
